# viskum-interpreter

./: .gitignore  Cargo.toml  README.md  file.vs  hello.js  out.asm  puzzle.bc  sd.py  sdf.vs
asm/: executable  out.s
performance-tests/: CFG.java  Cargo.toml  fib.lua  hello.js  main.s  optimization-ideas.md
performance-tests/lifetimes-fix/: Cargo.toml
performance-tests/lifetimes-fix/src/: main.rs
performance-tests/machine-code/: Cargo.toml  llvm  llvm.ll  llvm.s
performance-tests/old-fashion-vm/: Cargo.toml  hello.py  js.js
performance-tests/old-fashion-vm/src/: before_change.rs  compiled_instructions.rs  convert_to_optimized.rs  instructions.rs  main.rs  slightly_after_change.rs  tests.rs
performance-tests/src/: instructions.rs  main.rs  rules_approach_3.rs  rules_approach_4.rs  vm_util.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
profiler/: Cargo.toml
profiler/profiler_macros/: Cargo.toml
profiler/profiler_macros/src/: lib.rs
profiler/src/: lib.rs  time_tracker.rs
src/: constants.rs  main.rs  operations.rs
src/ast/: ast_symbol_table.rs  expr.rs  generate_cfg.rs  mod.rs  stmt.rs  symbol_table.rs  type_check.rs
src/ast/expr/: binary_expr.rs  fn_call_expr.rs  mod.rs  (+4 more)
src/compiler/: mod.rs  vm_symbol_table.rs
src/error_handler/: mod.rs
src/macros/: merge_chars_range.rs  mod.rs  tokens_and_parse_rules.rs
src/parser/: core_methods.rs  helper_methods.rs  mod.rs  parse_rule.rs  parse_rule_methods.rs
src/util/: mod.rs
src/value/: mod.rs
src/value_v2/: mod.rs
src/vm/: helper_methods.rs  helper_structs.rs  mod.rs  vm2.rs
(+84 files in other folders)
