[package]
name = "viskum-language"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
indexmap = "2.2.5"
profiler = { path = "./profiler" }
colored = "2.1.0"
ahash = "0.8.11"

[profile.release-profiler]
inherits = "release"
debug-assertions = true
debug = true
