[package]
name = "viskum-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
indexmap = "2.2.5"
proc_macros = { path = "./proc_macros"}
colored = "2.1.0"
ahash = "0.8.11"
typed-arena = "2.0.2"

[profile.release]
debug = true
codegen-units = 1
lto = true
panic = "abort"

[profile.release-profiler]
inherits = "release"
debug-assertions = true
debug = true
codegen-units = 16
lto = false
